--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
+        with:
+          node-version-from: package.json
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+      - run: yarn install
 
-      - name: Build project
-        run: npm run build
+      - run: yarn build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
