--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           node-version-from: package.json
 
+      - run: corepack enable
+      - run: corepack install
       - run: yarn install
-
       - run: yarn build
 
       - name: Upload production-ready build files
